fixed accent and phones align

--- a/src/components/Home/elements/SecondBanner/styles.module.scss
+++ b/src/components/Home/elements/SecondBanner/styles.module.scss
@@ -40,11 +40,10 @@
 
 ._phones{
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 100%;
-
+  margin-top: 1rem;
 }
 
 
